src/components/Nav/nav.css
.nav {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  background-color: #3d3d3d;
  margin-bottom: 3rem;
}
.navbar-header {
  color: #F3BB9A !important;
  margin: 0.1em;
  padding-right: 0.5em;
  padding-left: 0.3em;
  font-size: 2.5em;
  font-weight: 500 !important;
  letter-spacing: 0.1em;
}

.navbar-link {
  margin: 0.1em;
  font-size: 1.75em;
  letter-spacing: 0.1em;
  text-indent: 0.3em;
  /* color: #091B40!important;*/
  color: #F3BB9A !important;

  font-weight: 500 !important;
  padding: 0.5em;
}

.navbar-link:hover {
  transform: translateY(-2px);
  color: #d9d4d0 !important;
}

.navbar-header:hover {
  transform: translateY(-2px);
  color: #d9d4d0 !important;
}

@media (max-width: 400px) {
  .navbar-header {
    color: #F3BB9A !important;
    margin: 10px;
    padding-right: 0.5em;
    padding-left: 0.3em;
    font-size: 1.5em;
    font-weight: 500 !important;
    letter-spacing: 0.1em;
  }

  .navbar-link {
    margin: 0.1em;
    font-size: 1.25em;
    letter-spacing: 0.1em;
    text-indent: 0.3em;
    color: #F3BB9A !important;
    font-weight: 500 !important;
    padding: 0.5em;
  }
}

